--- a/src/languages/th.json
+++ b/src/languages/th.json
@@ -1249,5 +1249,18 @@
 
   "create_wallet": "สร้างกระเป๋าสตางค์",
   "no_still_pay": "ไม่, ยังคงจ่ายด้วย LokaPay",
-  "do_you_want_create_wallet": "คุณต้องการสร้างกระเป๋าสตางค์และจ่ายด้วยบัตรกำนัลเพื่อรับคะแนนฟรีหรือไม่?"
+  "do_you_want_create_wallet": "คุณต้องการสร้างกระเป๋าสตางค์และจ่ายด้วยบัตรกำนัลเพื่อรับคะแนนฟรีหรือไม่?",
+
+  "please_choose_exact_location": "กรุณาเลือกตำแหน่งที่แน่นอนภายในระยะ 5 เมตรเพื่อโพสต์",
+  "congratulate_on_receiving_daily_reward": "ขอแสดงความยินดีที่ได้รับรางวัลการล็อกอินประจำวันของคุณ!",
+
+  "skip": "ข้าม",
+  "please_create_wallet_to_received_reward": "กรุณาสร้างกระเป๋าสตางค์เพื่อรับรางวัลการเข้าสู่ระบบรายวัน",
+  "receive_now": "รับตอนนี้",
+  "your_balance_fee_gas_not_enough": "ค่าธรรมเนียมก๊าซของคุณไม่เพียงพอที่จะได้รับรางวัลการเช็คอิน โปรดรับ TOBE จาก faucet ทันที",
+  "received": "ได้รับแล้ว",
+  "daily_checkin": "เช็คอินรายวัน",
+
+  "now": "ตอนนี้",
+  "you": "คุณ"
 }
