--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -1269,5 +1269,12 @@
   "daily_checkin": "Daily check-in",
 
   "now": "now",
-  "you": "you"
+  "you": "you",
+
+  "billion": "billion",
+  "million": "million",
+  "invalid_youtube_link": "YouTube link is not valid",
+
+  "room_manage_detail": "Room management detail",
+  "share_detail_tour_short_video": "Share the details of your tour through short videos, these videos will appear on trends!"
 }
